# CentromereAssembly

./: .gitignore  .gitmodules  BITS  LICENSE  Makefile  README.md  config.template  dalayout_dev-Copy1.ipynb  dalayout_dev.ipynb  encoded_reads.pkl  hoge.0.dot  map_master_units.sh  peak_0_repr_0.raw_units  peak_0_repr_0.raw_units.t0.0.0.dot  peak_0_repr_0.raw_units.t0.0.1.dot  peak_0_repr_0.raw_units.t0.0.3.dot  peak_0_repr_0.raw_units.t0.0.consed  peak_0_repr_0.raw_units.t0.0.consed.V  peak_0_repr_0.raw_units.t0.15.0.dot  peak_0_repr_0.raw_units.t0.15.1.dot  peak_0_repr_0.raw_units.t0.15.2.dot  peak_0_repr_0.raw_units.t0.15.3.dot  peak_0_repr_0.raw_units.t0.15.consed  peak_0_repr_0.raw_units.t0.15.consed.2.dot  peak_0_repr_0.raw_units.t0.15.consed.V  peak_0_repr_1.raw_units  peak_0_repr_1.raw_units.t0.0.consed  peak_0_repr_1.raw_units.t0.0.consed.1.dot  peak_0_repr_1.raw_units.t0.0.consed.V  peak_0_repr_1.raw_units.t0.15.consed  peak_0_repr_1.raw_units.t0.15.consed.0.dot  peak_0_repr_1.raw_units.t0.15.consed.2.dot  peak_0_repr_1.raw_units.t0.15.consed.3.dot  peak_0_repr_1.raw_units.t0.15.consed.V  read viewer.ipynb  setup.cfg  tempalte.config
contigs/: canu.fasta  ours.fasta
dacenter/: README.md  dacenter_peak.py  dacenter_run.py  dacenter_run_peak.py  dacenter_run_unit.py  dacenter_unit.py  dacenter_viewer.py  dpmm.oldname.py  dpmm.py  run_dpmm.gibbs.slurm  run_dpmm.slurm  setup.cfg
dacenter/dacenter/: __init__.py  dacenter.py  dacenter_run_peak.py  dacenter_run_unit.py  dacenter_viewer.py  datruf_utils.py  setup.py
dacmaster/: README.md  setup.cfg
dacmaster/backup/: peak.py  run.py
dacmaster/dacmaster/: .#io.py  __init__.py  clustering.py  dacenter_viewer.py  dacmaster_core.py  dacmaster_io.py  dacmaster_run.py  dacmaster_viewer.py  io.py  peak.py  run.py
damaster/: setup.cfg
damaster/damaster/: __init__.py  damaster_core.py  damaster_io.py  damaster_run.py  damaster_viewer.py
datruf/: Makefile  README.md  datruf_core.py  datruf_distribute.py  datruf_io.py  datruf_plot.py  datruf_run.py  datruf_utils.py  datruf_v2.py  datruf_viewer.py  run_datruf.sh  run_datruf.slurm  setup.cfg  setup.py
datruf/datruf/: __init__.py  core.py  datruf_core.py  datruf_distribute.py  datruf_io.py  datruf_plot.py  datruf_run.py  datruf_viewer.py  distribute.py  io.py  load.py  run.py  view.py
docs/: README.md
ipynbs/: 1. datander and datruf.ipynb  2. TRReadFilter.ipynb  README.md
notebooks/: Overlap beta-s plot.ipynb
notebooks/benchmark_datander_datruf/: Benchmark datander and datruf.ipynb
notebooks/dmel_pacbio_ccs/: 1.1. Short read filtering.ipynb  1.2. AVA centromere read overlap with daligner [including low cover rate reads].ipynb  1.2. AVA centromere read overlap with daligner.ipynb  2. Unit classification.ipynb  2.0. Synchronize units for each read [prior to 2.].ipynb  2.1. Extract Phred scores of the centromere reads.ipynb  3. Feature construction for overlap filtering.ipynb  3. Read-wise analysis.ipynb  3.0. t-SNE plot of intra-read consensus units.ipynb  3.1. Extract Phred scores of the centromere reads.ipynb  3.1. Per-read consensus unit.ipynb  3.3. Characterize single read as read spectrum.ipynb  3.3. Split-merge sequence clustering.ipynb  4. Check all-vs-all overlaps in normal regions.ipynb  4. Unit classification.ipynb  4.2. All-vs-all overlap by BLAST.ipynb  data
notebooks/dmel_pacbio_clr/: 1. datander and datruf.ipynb  3. ReadViewer.ipynb  3. Unit classification.ipynb  Drosophila PacBio CLR.ipynb  data
notebooks/usage/: 1. datander.ipynb  2.  datruf.ipynb  3. ReadViewer.ipynb
src/: __init__.py  alt_consensus.py  ava_unsync_reads.py  ava_unsync_reads_overlap.py  clustering.py  contig.py  datander.py  datruf.py  encode.py  filter_peak_ulen.py  filter_tr_reads.py  graph.py  labeled_reads_viewer.py  main.py  read.py  read_viewer.py  read_viewer_flask.py  repr_units_dot_plot.sh  run.sh  run_ava_unsync_reads_overlap.py  scheduler_args.py  split_merge_clustering_units.py  synchronize_units.py  tr_unit_composition.py  types.py  viewer.py
src/archive/: gather_ava_sub.py  graph_new.py  run_encode.py  run_graph_new.py  synchronize_units.py
src/dacmaster/: calc_dist_mat_sub.py  clustering.py  dpmm_parallel.py  dpmm_standalone.py  peak.py  run.py
src/dalayout/: align.py  calc_repr.py  encode.py  gather_ava_sub.py  graph.py  graph_new.py  run.py  run_ava_sub.py  run_encode.py  run_graph.py  run_repr.py  separate.py
src/datander/: __init__.py  datander.py  main.py
src/datruf/: __init__.py  core.py  datruf.py  distribute.py  find_units.py  io.py  main.py  plot.py  run.py  view.py
src/overlapper/: __init__.py  ava_labeled_reads.py  ava_unsync_reads.py  dovetail_overlap.py  overlap_filter.py  split_merge_clustering_units.py  svs_unsync_reads.py
src/scripts/: dacembler.sh  dacmaster.sh  dalayout.sh  dalayout_encode.sh  dalayout_graph.sh  datander.sh  datruf.sh  fasta_to_db.sh  repr_units_dot_plot.sh
src/simulator/: __init__.py  core.py  hetero_tr.py  homo_tr.py  unit_seqs.py
