[metadata]
name = dacembler
version = 0.1.0
description = DAzzler Centromere assEMBLER
long_description = file: README.md
author = Yoshihiko Suzuki


[options]
package_dir =
  = src
packages =
  datruf
  dacmaster
install_requires =
  numpy >= 1.16.0
  pandas >= 0.24.0
  scikit-learn >= 0.20.2
  matplotlib >= 3.0.2
  matplotlib-venn >= 0.11.5
  seaborn >= 0.9.0
  plotly >= 3.6.0rc1
  pyinterval >= 1.2.0
  logzero >= 1.5.0
  edlib >= 1.2.4
  BITS
  pbcore
  consed
dependency_links =
  git+ssh://git@github.com/yoshihikosuzuki/BITS.git#egg=BITS
  git+ssh://git@github.com/yoshihikosuzuki/pbcore.git#egg=pbcore-1.5.0
  git+ssh://git@gitlab.com/yoshihikosuzuki/consed_python.git#egg=consed


[options.entry_points]
console_scripts =
  datruf_run.py = datruf.run:main
  datruf_run_distribute.py = datruf.distribute:main
  dacmaster_run.py = dacmaster.run:main
