[metadata]
name = VCA
version = 0.1.0
description = Vertebrate Centromere Assembler
long_description = file: README.md
author = Yoshihiko Suzuki


[options]
package_dir =
  vca = src
packages =
  vca
  vca.datander
  vca.datruf
  vca.overlapper
  vca.simulator
install_requires =
  cython >= 0.29
  numpy >= 1.16.0
  pandas >= 0.24.0
  scikit-learn >= 0.20.2
  matplotlib >= 3.0.2
  matplotlib-venn >= 0.11.5
  seaborn >= 0.9.0
  plotly >= 3.6.0rc1
  python-igraph == 0.7.1.post6
  pyinterval >= 1.2.0
  logzero >= 1.5.0
  edlib >= 1.2.4
  BITS
  consed
dependency_links =
  git+ssh://git@github.com/yoshihikosuzuki/BITS.git#egg=BITS
  git+ssh://git@gitlab.com/yoshihikosuzuki/consed_python.git#egg=consed


[options.entry_points]
console_scripts =
  vca = vca.main:main
