[metadata]
name = dacenter
version = 0.1.0
description = DAzzler CENTromere clustERing module
long_description = file: README.md
author = Yoshihiko Suzuki
# license = file: LICENSE


[options]
packages = find:
install_requires =
  numpy
  pandas   # TODO: specify version


[options.entry_points]
console_scripts =
  dacenter_run_peak.py = dacenter.dacenter_run_peak:main
  dacenter_run_unit.py = dacenter.dacenter_run_unit:main


[options.packages.find]
exclude =
  tests
  docs
