[metadata]
name = dacenter
version = 0.1.0
description = DAzzler CENTromere clustERing module
long_description = file: README.md
author = Yoshihiko Suzuki
# license = file: LICENSE


[options]
packages = find:
install_requires =
  BITS==0.0.1
  certifi==2018.4.16
  chardet==3.0.4
  crlibm==1.0.3
  cycler==0.10.0
  dacenter==0.1.0
  decorator==4.3.0
  edlib==1.2.3.post1
  idna==2.7
  ipython-genutils==0.2.0
  jsonschema==2.6.0
  jupyter-core==4.4.0
  kiwisolver==1.0.1
  matplotlib==2.2.2
  nbformat==4.4.0
  numpy==1.15.0
  pandas==0.23.3
  pbcore==1.5.0
  plotly==3.1.0
  pyinterval==1.2.0
  pyparsing==2.2.0
  python-dateutil==2.7.3
  pytz==2018.5
  requests==2.19.1
  retrying==1.3.3
  scikit-learn==0.19.2
  scipy==1.1.0
  seaborn==0.9.0
  six==1.11.0
  sklearn==0.0
  traitlets==4.3.2
  urllib3==1.23
dependency_links =
  git+ssh://git@github.com/yoshihikosuzuki/pbcore.git#egg=pbcore-1.5.0
  git+ssh://git@github.com/yoshihikosuzuki/BITS.git#egg=BITS-0.0.1


[options.packages.find]
exclude =
  tests
  docs
