[metadata]
name = dacmaster
version = 0.0.1
description = DAzzler Centromeric Monomer AsjuSTER
long_description = file: README.md
author = Yoshihiko Suzuki
# license = file: LICENSE


[options]
packages = find:
install_requires =
dependency_links =
  git+ssh://git@github.com/yoshihikosuzuki/pbcore.git#egg=pbcore-1.5.0
  git+ssh://git@github.com/yoshihikosuzuki/BITS.git#egg=BITS-0.0.1


[options.entry_points]
console_scripts =
  dacmaster_run.py = dacmaster.dacmaster_run:main


[options.packages.find]
exclude =
  tests
  docs
