[metadata]
name = datruf
version = 0.2.0
description = DAzzler Tandem Repeat Unit Finding modul
long_description = file: README.md
author = Yoshihiko Suzuki
# license = file: LICENSE


[options]
packages = find:
install_requires =
  numpy
  pandas   # TODO: specify version


[options.entry_points]
console_scripts =
  datruf_run.py = datruf.datruf_run:main
  datruf_run_distribute.py = datruf.datruf_distribute:main


[options.packages.find]
exclude =
  tests
  docs
