[metadata]
name = datruf
version = 0.2.0
description = DAzzler Tandem Repeat Unit Finding module
long_description = file: README.md
author = Yoshihiko Suzuki
# license = file: LICENSE


[options]
packages = find:
install_requires =
  attrs==18.1.0
  BITS==0.0.1
  certifi==2018.4.16
  chardet==3.0.4
  crlibm==1.0.3
  cycler==0.10.0
  Cython==0.28.4
  decorator==4.3.0
  idna==2.7
  ipython-genutils==0.2.0
  jsonschema==3.0.0a1
  jupyter-core==4.4.0
  kiwisolver==1.0.1
  logzero==1.5.0
  matplotlib==2.2.2
  matplotlib-venn==0.11.5
  nbformat==4.4.0
  networkx==2.1
  numpy==1.15.0
  pandas==0.23.3
  pbcore==1.5.0
  plotly==3.1.0
  pyinterval==1.2.0
  pyparsing==2.2.0
  pyrsistent==0.14.4
  pysam==0.14.1
  python-dateutil==2.7.3
  pytz==2018.5
  requests==2.19.1
  retrying==1.3.3
  scipy==1.1.0
  six==1.11.0
  traitlets==4.3.2
  urllib3==1.23
dependency_links =
  git+ssh://git@github.com/yoshihikosuzuki/pbcore.git#egg=pbcore-1.5.0
  git+ssh://git@github.com/yoshihikosuzuki/BITS.git#egg=BITS-0.0.1


[options.entry_points]
console_scripts =
  datruf_run.py = datruf.datruf_run:main
  datruf_run_distribute.py = datruf.datruf_distribute:main


[options.packages.find]
exclude =
  tests
  docs
