[metadata]
name = datruf
version = 0.2.0
description = DAzzler Tandem Repeat Unit Finding module
long_description = file: README.md
author = Yoshihiko Suzuki
# license = file: LICENSE


[options]
packages = find:
install_requires =
  BITS
  pbcore
dependency_links =
  git+ssh://git@github.com/yoshihikosuzuki/pbcore.git#egg=pbcore
  git+ssh://git@github.com/yoshihikosuzuki/BITS.git#egg=BITS


[options.entry_points]
console_scripts =
  datruf_run.py = datruf.run:main
  datruf_run_distribute.py = datruf.distribute:main


[options.packages.find]
exclude =
  tests
  docs
